# demos_v1

./: .gitignore  .gitmodules  README.md  代办.md
FlameGraph/: perf_ana.sh
cpp_primer/: thread_test.cpp
cpp_primer/ch_02/const限定符/constexpr/: first_positive.cpp
cpp_primer/ch_16_1/非类型模板参数与数组/: main.cpp  readme.md
cpp_primer/ch_9_6/容器适配器/: priority_queue_test.cpp  stack实现四则运算.cpp
cpp_primer/tips/: 一个explicit的构造函数形参是string可以接收字符串字面量吗.cpp
ftxui_learing/calc4/: calc4.h
ftxui_learing/hello_world/: CMakeLists.txt  CMakePresets.json  main.cpp
ftxui_learing/hello_world/.cache/clangd/index/: main.cpp.7D143A6EC7550893.idx
ftxui_learning/calc4/: CMakeLists.txt  CalcController.cpp  CalcController.h  CalcModel.cpp  CalcModel.h  CalcView.cpp  CalcView.h  calc4.cpp  main.cpp  ui.cpp  ui.h
ftxui_learning/hello_world/: evaluate.cpp
lib/ftxui/static-debug/cmake/ftxui/: ftxui-targets-debug.cmake
lib/gflags/shared-debug/: libgmock.so.1.16.0  libgmock_main.so.1.16.0  libgtest.so.1.16.0  libgtest_main.so.1.16.0
lib/gflags/shared-release/: libgmock.so.1.16.0  libgmock_main.so.1.16.0  libgtest.so.1.16.0  libgtest_main.so.1.16.0
lib/glog/shared-debug/: libgmock.so.1.16.0  libgmock_main.so.1.16.0  libgtest.so.1.16.0  libgtest_main.so.1.16.0
lib/glog/shared-release/: libgmock.so.1.16.0  libgmock_main.so.1.16.0  libgtest.so.1.16.0  libgtest_main.so.1.16.0
lib/glog/static-debug/cmake/GTest/: GTestTargets-debug.cmake
lib/glog/static-release/cmake/GTest/: GTestTargets-release.cmake
lib/gtest/shared-debug/: libgmock.so.1.16.0  libgmock_main.so.1.16.0  libgtest.so.1.16.0  libgtest_main.so.1.16.0
lib/gtest/shared-debug/cmake/GTest/: GTestTargets-debug.cmake
lib/gtest/shared-debug/pkgconfig/: gtest_main.pc
lib/gtest/shared-release/: libgmock_main.so.1.16.0
lib/shared-debug/gtest/: libgmock.so.1.16.0  libgmock_main.so.1.16.0  libgtest.so.1.16.0  libgtest_main.so.1.16.0
lib/shared-debug/gtest/pkgconfig/: gmock.pc  gmock_main.pc
lib/shared-release/gtest/: libgmock.so.1.16.0  libgtest.so.1.16.0  libgtest_main.so.1.16.0
lib/shared-release/gtest/cmake/GTest/: GTestTargets-release.cmake
lib/shared-release/gtest/pkgconfig/: gtest.pc
lib/static-debug/ftxui/lib/pkgconfig/: ftxui.pc
lib/static-debug/ftxui/pkgconfig/: ftxui.pc
lib/static-debug/gflags/lib/cmake/gflags/: gflags-nonamespace-targets-debug.cmake  gflags-nonamespace-targets.cmake  gflags-targets-debug.cmake  gflags-targets.cmake
lib/static-debug/gflags/lib/pkgconfig/: gflags.pc
lib/static-debug/glog/cmake/glog/: glog-config.cmake  glog-modules.cmake  glog-targets-debug.cmake
lib/static-debug/glog/lib/cmake/glog/: glog-targets.cmake
notes/: readme.md
notes/cmake/tips/: 在CMakePresets.json中获取一些环境变量.md
notes/git/: 怎么删除不小心加入到git管理系统的文件.md
notes/linux/tips/: 修改家目录名字.md
